force-app/main/default/objects/Org_Health_Score__c/Org_Health_Score__c.object-meta.xml
<CustomObject>
    <label>Org Health Score</label>
    <pluralLabel>Org Health Scores</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>OHS-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores org health score snapshots with quality, security, and debt metrics</description>
</CustomObject>