force-app/main/default/objects/Org_Health_Score__c/fields/Code_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Code_Quality_Score__c</fullName>
    <label>Code Quality Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>