force-app/main/default/objects/Org_Health_Score__c/fields/Debt_Hours__c.field-meta.xml
<CustomField>
    <fullName>Debt_Hours__c</fullName>
    <label>Debt Hours</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>