force-app/main/default/objects/Org_Health_Score__c/fields/Debt_Score__c.field-meta.xml
<CustomField>
    <fullName>Debt_Score__c</fullName>
    <label>Debt Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>