force-app/main/default/objects/Org_Health_Score__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Lookup</type>
    <referenceTo>Environment__c</referenceTo>
    <relationshipName>Health_Scores</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>