force-app/main/default/objects/Org_Health_Score__c/fields/Scan_Date__c.field-meta.xml
<CustomField>
    <fullName>Scan_Date__c</fullName>
    <label>Scan Date</label>
    <type>DateTime</type>
</CustomField>