force-app/main/default/objects/Org_Health_Score__c/fields/Security_Score__c.field-meta.xml
<CustomField>
    <fullName>Security_Score__c</fullName>
    <label>Security Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>