force-app/main/default/objects/Org_Health_Score__c/fields/Total_Issues__c.field-meta.xml
<CustomField>
    <fullName>Total_Issues__c</fullName>
    <label>Total Issues</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>